# Social-Media-Site

./: .gitignore  README.md
Backend/: README.md
Backend/actix-backend/: Cargo.toml
Backend/actix-backend/src/: main.rs
Email/: README.md
