[package]
name = "actix-backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
config = "0.11"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
sqlx = { version = "0.5.6", features = ["runtime-tokio-rustls", "postgres"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1.0.66"
